--- a/report/proyecto_idDpto_report.xml
+++ b/report/proyecto_idDpto_report.xml
@@ -17,6 +17,7 @@
                 <t t-call="web.external_layout">
                     <div class="page">
                         <h2>Informe</h2>
+                        <h2 t-field="departamento.nombreDpto"></h2>
                     </div>
                 </t>
             </t>
