--- a/report/proyecto_idDpto_report.xml
+++ b/report/proyecto_idDpto_report.xml
@@ -17,7 +17,11 @@
                 <t t-call="web.external_layout">
                     <div class="page">
                         <h2>Informe</h2>
-                        <h2 t-field="departamento.nombreDpto"></h2>
+                        <h3 t-field="departamento.nombreDepartamento"></h2>
+                        <t t-foreach="departamento.empleado_id" t-as="empleado">
+                            <span t-field="empleado.dniEmpleado"/>
+                            <span t-field="empleado.nombreEmpleado"/>
+                        </t>
                     </div>
                 </t>
             </t>
