--- a/report/proyecto_idDpto_report.xml
+++ b/report/proyecto_idDpto_report.xml
@@ -18,10 +18,37 @@
                     <div class="page">
                         <h2>Informe</h2>
                         <h3 t-field="departamento.nombreDepartamento"></h3>
-                        <t t-foreach="departamento.empleado_id" t-as="empleado">
-                            <span t-field="empleado.dniEmpleado"/>
-                            <span t-field="empleado.nombreEmpleado"/>
-                        </t>
+                       
+
+                        <table class="mitabla">
+                            <thread>
+                                <tr>
+                                    <th>DNI</th>
+                                    <th>Nombre</th>
+                                    <th>Fecha de nacimiento</th>
+                                    <th>Edad</th>
+                                    <th>Direccion</th>
+                                    <th>Telefono</th>
+                                        
+                                </tr>
+                            </thread>
+                            <tbody>
+                                <t t-foreach="departamento.empleado_id" t-as="empleado">
+                                    <tr>
+                                        <td>
+                                            <span t-field="empleado.dniEmpleado"/>
+                                        </td>
+                                        <td>
+                                            <span t-field="empleado.nombreEmpleado"/>
+                                        </td>
+                                    </tr>
+                                </t>
+                            </tbody>
+
+                        </table>
+
+                            
+                        
                     </div>
                 </t>
             </t>
