--- a/horarios/views/views.xml
+++ b/horarios/views/views.xml
@@ -30,6 +30,7 @@
           </group>
           <notebook>
             <page string="Pagina 1">
+              <field name="nombreHorario"/>
               <group col="2">
                 <field name="lunesEntrada" widget="timepicker" options="{'datepicker': {'stepping': 15}}" style="width:10%%"/>
                 <field name="lunesSalida" widget="timepicker" options="{'datepicker': {'stepping': 15}}" style="width:10%%"/>
