--- a/horarios/views/views.xml
+++ b/horarios/views/views.xml
@@ -68,6 +68,29 @@
     </field>
   </record>
 
+
+ <!--VISTA DE BAJAS TREE-->
+   <record model="ir.ui.view" id="horarios.bajas_list_view">
+    <field name="name">horarios.bajas.view.tree</field>
+    <field name="model">horarios.bajas</field>
+    <field name="arch" type="xml">
+      <tree>
+        <field name="fechaBaja"/>
+        <field name="motivoBaja"/>
+        <field name="empleado_id"/>
+      </tree>
+    </field>
+  </record>
+
+
+
+
+
+
+
+
+
+
  <!--DEFINICION DE MENUS-->
     <!-- Top menu item -->
   <record model="ir.actions.act_window" id="horarios.horario_action_window">
@@ -76,9 +99,18 @@
     <field name="view_mode">tree,form</field>
   </record>
 
-  <menuitem name="horarios" id="horarios.menu_root"/>
+   <!--DEFINICION DE MENUS-->
+    <!-- Top menu Bajas -->
+  <record model="ir.actions.act_window" id="horarios.bajas_action_window">
+    <field name="name">Bajas</field>
+    <field name="res_model">horarios.bajas</field>
+    <field name="view_mode">tree,form</field>
+  </record>
 
+  <menuitem name="horarios" id="horarios.menu_root"/>
   <menuitem name="Horario" id="horarios.horario_menu" parent="horarios.menu_root" action="horarios.horario_action_window"/>
+
+  <menuitem name="Bajas" id="horarios.bajas_menu" parent="horarios.menu_root" action="horarios.bajas_action_window"/>
 
 
 
