--- a/horarios/views/views.xml
+++ b/horarios/views/views.xml
@@ -73,15 +73,12 @@
     <field name="model">horarios.bajas</field>
     <field name="arch" type="xml">
       <tree>
-        <field name="dsdsd"/>
-        <field name="dsds"/>
+        <field name="motivoBaja"/>
+        <field name="descripcionBaja"/>
         <field name="empleado_id"/>
       </tree>
     </field>
   </record>
- 
-
-
 
 
  <!--DEFINICION DE MENUS-->
