--- a/mantenimientos/views/views.xml
+++ b/mantenimientos/views/views.xml
@@ -56,5 +56,21 @@
     <menuitem name="Server to list" id="mantenimientos" parent="mantenimientos.menu_2"
               action="mantenimientos.action_server"/>
 -->
+
+
+
+
+
+
+
+
+
+
+
+
+    <menuitem name="Mantenimientos" id="mantenimientos.menu_root"/>
+
+    <menuitem name="Descripcion" id="proyectos.descripcion_menu" parent="mantenimientos.menu_root" action="mantenimientos.descripcion_action_window"/>
+    <menuitem name="Coches" id="proyectos.coches_menu" parent="mantenimientos.menu_root" action="mantenimientos.coches_action_window"/>
   </data>
 </odoo>
