--- a/mantenimientos/views/views.xml
+++ b/mantenimientos/views/views.xml
@@ -116,7 +116,7 @@
               </page>
               <page string="Pagina 2">
                 <CONTENT/>
-              </<page>
+              </page>
             </notebook>
           </sheet>
         </form>
