--- a/proveedores/views/views.xml
+++ b/proveedores/views/views.xml
@@ -1,67 +1,119 @@
 <odoo>
-  <data>
-    <!-- explicit list view definition -->
+	<data>
+		<!-- explicit list view definition -->
 <!--
-    <record model="ir.ui.view" id="proveedores.list">
-      <field name="name">Proveedores list</field>
-      <field name="model">proveedores.proveedores</field>
-      <field name="arch" type="xml">
-        <tree>
-          <field name="name"/>
-          <field name="value"/>
-          <field name="value2"/>
-        </tree>
-      </field>
-    </record>
+		<record model="ir.ui.view" id="proveedores.list">
+			<field name="name">Proveedores list</field>
+			<field name="model">proveedores.proveedores</field>
+			<field name="arch" type="xml">
+				<tree>
+					<field name="name"/>
+					<field name="value"/>
+					<field name="value2"/>
+				</tree>
+			</field>
+		</record>
 -->
 
-    <!-- actions opening views on models -->
+		<!-- actions opening views on models -->
 <!--
-    <record model="ir.actions.act_window" id="proveedores.action_window">
-      <field name="name">Proveedores window</field>
-      <field name="res_model">proveedores.proveedores</field>
-      <field name="view_mode">tree,form</field>
-    </record>
+		<record model="ir.actions.act_window" id="proveedores.action_window">
+			<field name="name">Proveedores window</field>
+			<field name="res_model">proveedores.proveedores</field>
+			<field name="view_mode">tree,form</field>
+		</record>
 -->
 
-    <!-- server action to the one above -->
+		<!-- server action to the one above -->
 <!--
-    <record model="ir.actions.server" id="proveedores.action_server">
-      <field name="name">Proveedores server</field>
-      <field name="model_id" ref="model_proveedores_proveedores"/>
-      <field name="state">code</field>
-      <field name="code">
-        action = {
-          "type": "ir.actions.act_window",
-          "view_mode": "tree,form",
-          "res_model": model._name,
-        }
-      </field>
-    </record>
+		<record model="ir.actions.server" id="proveedores.action_server">
+			<field name="name">Proveedores server</field>
+			<field name="model_id" ref="model_proveedores_proveedores"/>
+			<field name="state">code</field>
+			<field name="code">
+				action = {
+					"type": "ir.actions.act_window",
+					"view_mode": "tree,form",
+					"res_model": model._name,
+				}
+			</field>
+		</record>
 -->
 
-    <!-- Top menu item -->
+		<!-- Top menu item -->
 <!--
-    <menuitem name="Proveedores" id="proveedores.menu_root"/>
+		<menuitem name="Proveedores" id="proveedores.menu_root"/>
 -->
-    <!-- menu categories -->
+		<!-- menu categories -->
 <!--
-    <menuitem name="Menu 1" id="proveedores.menu_1" parent="proveedores.menu_root"/>
-    <menuitem name="Menu 2" id="proveedores.menu_2" parent="proveedores.menu_root"/>
+		<menuitem name="Menu 1" id="proveedores.menu_1" parent="proveedores.menu_root"/>
+		<menuitem name="Menu 2" id="proveedores.menu_2" parent="proveedores.menu_root"/>
 -->
-    <!-- actions -->
+		<!-- actions -->
 <!--
-    <menuitem name="List" id="proveedores.menu_1_list" parent="proveedores.menu_1"
-              action="proveedores.action_window"/>
-    <menuitem name="Server to list" id="proveedores" parent="proveedores.menu_2"
-              action="proveedores.action_server"/>
+		<menuitem name="List" id="proveedores.menu_1_list" parent="proveedores.menu_1"
+							action="proveedores.action_window"/>
+		<menuitem name="Server to list" id="proveedores" parent="proveedores.menu_2"
+							action="proveedores.action_server"/>
 -->
 
-  <!--Top menu item -->
-  
+	<!--Top menu item -->
+	
+	<record model="ir.actions.act_window" id="proveedores.empresas_action_window">
+		<field name="name">Empresas</field>
+		<field name="res_model">proveedores.empresas</field>
+		<field name="view_mode">tree,form</field>
+	</record>
+	<!-- Vista coches -->
+	<record model="ir.ui.view" id="proveedores.empresas_view">
+		<field name="name">proveedores.empresas.view.tree</field>
+		<field name="model">proveedores.empresas</field>
+		<field name="arch" type="xml">
+			<form>
+				<sheet>
+					<div class="oe_button_box">
+					<BUTTONS/>
+					</div>
+					<group>
+						<group>
+							<h1>Vista Empresas</h1>
+						</group>
+					</group>
+					<notebook>
+						<page string="Pagina 1">
+							<group>
+								<field name="NIFEmpresa"/>
+							</group>
+							<group>
+								<field name="NombreEmpresa"/>
+							</group>
+							<group>
+								<field name="Localizacion"/>
+							</group>
+							<group>
+								<field name="Facturacion"/>
+							</group>
+						</page>
+						<page string="Pagina 2">
+							<CONTENT/>
+						</page>
+					</notebook>
+				</sheet>
+			</form>
+		</field>
+	</record>
 
-  <menuitem name="Proveedores" id="proveedores.menu_root"/>
 
-  <menuitem name="Empresas" id="proveedores.empresas_menu" parent="proveedores.menu_root" action="proveedores.empresas_action_window"/>
-  </data>
+	<!--DEFINICION DE MENUS-->
+  <!-- Top menu item -->
+  <record model="ir.actions.act_window" id="proveedores.materiales_action_window">
+    <field name="name">Materiales</field>
+    <field name="res_model">proveedores.materiales</field>
+    <field name="view_mode">tree,form</field>
+  </record>
+	<menuitem name="Proveedores" id="proveedores.menu_root"/>
+
+	<menuitem name="Empresas" id="proveedores.empresas_menu" parent="proveedores.menu_root" action="proveedores.empresas_action_window"/>
+	<menuitem name="Materiales" id="proveedores.materiales_menu" parent="proveedores.menu_root" action="proveedores.materiales_action_window"/>
+	</data>
 </odoo>
