--- a/proveedores/views/views.xml
+++ b/proveedores/views/views.xml
@@ -64,6 +64,19 @@
 		<field name="res_model">proveedores.empresas</field>
 		<field name="view_mode">tree,form</field>
 	</record>
+	<!--Vista arbol -->
+	<record model="ir.actions.act_window" id="proveedores.empresas_action_window">
+		<field name="name">Empresas</field>
+		<field name="res_model">proveedores.empresas</field>
+		<field name="view_mode">tree,form</field>
+		<field name="arch" type="xml">
+        <tree>
+          <field name="NIFEmpresa"/>
+          <field name="NombreEmpresa"/>
+          <field name="Localizacion"/>
+        </tree>
+      </field>
+	</record>
 	<!-- Vista coches -->
 	<record model="ir.ui.view" id="proveedores.empresas_view">
 		<field name="name">proveedores.empresas.view.tree</field>
@@ -113,6 +126,18 @@
     <field name="res_model">proveedores.materiales</field>
     <field name="view_mode">tree,form</field>
   </record>
+  <!--Vista arbol -->
+  <record model="ir.actions.act_window" id="proveedores.materiales_action_window">
+    <field name="name">Materiales</field>
+    <field name="res_model">proveedores.materiales</field>
+    <field name="view_mode">tree,form</field>
+	<field name="arch" type="xml">
+        <tree>
+          <field name="IdPieza"/>
+          <field name="NombrePieza"/>
+        </tree>
+  </record>
+  
 	<menuitem name="Proveedores" id="proveedores.menu_root"/>
 
 	<menuitem name="Empresas" id="proveedores.empresas_menu" parent="proveedores.menu_root" action="proveedores.empresas_action_window"/>
