--- a/mantenimientos/views/views.xml
+++ b/mantenimientos/views/views.xml
@@ -117,6 +117,9 @@
                   <field name="Anio"/>
                 </group>
                 <group>
+                  <field name="FechaFa"/>
+                </group>
+                <group>
                   <field name="Motor"/>
                 </group>
                 <group>
