--- a/proveedores/views/views.xml
+++ b/proveedores/views/views.xml
@@ -66,7 +66,17 @@
 
 	</record>
 	<!--Vista arbol -->
-	
+	<record model="ir.ui.view" id="proveedores.empresas_list_view">
+      <field name="name">proveedores.empresas.view.tree</field>
+      <field name="model">proveedores.empresas</field>
+      <field name="arch" type="xml">
+        <tree>
+          <field name="NIFEmpresa"/>
+          <field name="NombreEmpresa"/>
+          <field name="Localizacion"/>
+        </tree>
+      </field>
+    </record>
 	<!-- Vista coches -->
 	<record model="ir.ui.view" id="proveedores.empresas_view">
 		<field name="name">proveedores.empresas.view.tree</field>
