--- a/mantenimientos/views/views.xml
+++ b/mantenimientos/views/views.xml
@@ -105,7 +105,7 @@
             </div>
             <group>
               <group>
-                <h1>Vista Coche</h1>
+                <h1>Coches registro</h1>
               </group>
             </group>
             <notebook>
