--- a/proveedores/views/views.xml
+++ b/proveedores/views/views.xml
@@ -89,7 +89,7 @@
 					</div>
 					<group>
 						<group>
-							<h1>Vista Empresas</h1>
+							<h1>Proveedores</h1>
 						</group>
 					</group>
 					<notebook>
